--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
     "editor.formatOnPaste": true,
     "editor.tabSize": 2,
     "eslint.enable": true,
-    "files.eol": "\n"
+    "files.eol": "\n",
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "prettier.endOfLine": "lf"
 }
